[gd_scene load_steps=9 format=3 uid="uid://hnhxkecsg5hn"]

[ext_resource type="Script" path="res://scripts/Tetris.gd" id="1_k3dpy"]
[ext_resource type="Script" path="res://scripts/MovementTimer.gd" id="2_8y2wp"]
[ext_resource type="Texture2D" uid="uid://668wmy2t4pfo" path="res://assets/cells.png" id="2_36wq3"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="3_mtcdl"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="4_3muce"]
[ext_resource type="FontFile" uid="uid://b35pudaqdsl5j" path="res://assets/press-start-2p-font/PressStart2P-vaV7.ttf" id="5_mt25t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4bcx2"]
texture = ExtResource("2_36wq3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSet" id="TileSet_yj4t5"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_4bcx2")

[node name="Tetris" type="Node2D"]
script = ExtResource("1_k3dpy")

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource("TileSet_yj4t5")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(65537, 393216, 1, 131073, 393216, 1, 196609, 393216, 1, 262145, 393216, 1, 327681, 393216, 1, 393217, 393216, 1, 458753, 393216, 1, 524289, 393216, 1, 589825, 393216, 1, 655361, 393216, 1, 720897, 393216, 1, 786433, 393216, 1, 851969, 393216, 1, 917505, 393216, 1, 983041, 393216, 1, 1048577, 393216, 1, 1114113, 393216, 1, 1179649, 393216, 1, 1245185, 393216, 1, 1310721, 393216, 1, 65538, 393216, 1, 131074, 393216, 1, 196610, 393216, 1, 262146, 393216, 1, 327682, 393216, 1, 393218, 393216, 1, 458754, 393216, 1, 524290, 393216, 1, 589826, 393216, 1, 655362, 393216, 1, 720898, 393216, 1, 786434, 393216, 1, 851970, 393216, 1, 917506, 393216, 1, 983042, 393216, 1, 1048578, 393216, 1, 1114114, 393216, 1, 1179650, 393216, 1, 1245186, 393216, 1, 1310722, 393216, 1, 65539, 393216, 1, 131075, 393216, 1, 196611, 393216, 1, 262147, 393216, 1, 327683, 393216, 1, 393219, 393216, 1, 458755, 393216, 1, 524291, 393216, 1, 589827, 393216, 1, 655363, 393216, 1, 720899, 393216, 1, 786435, 393216, 1, 851971, 393216, 1, 917507, 393216, 1, 983043, 393216, 1, 1048579, 393216, 1, 1114115, 393216, 1, 1179651, 393216, 1, 1245187, 393216, 1, 1310723, 393216, 1, 65540, 393216, 1, 131076, 393216, 1, 196612, 393216, 1, 262148, 393216, 1, 327684, 393216, 1, 393220, 393216, 1, 458756, 393216, 1, 524292, 393216, 1, 589828, 393216, 1, 655364, 393216, 1, 720900, 393216, 1, 786436, 393216, 1, 851972, 393216, 1, 917508, 393216, 1, 983044, 393216, 1, 1048580, 393216, 1, 1114116, 393216, 1, 1179652, 393216, 1, 1245188, 393216, 1, 1310724, 393216, 1, 65541, 393216, 1, 131077, 393216, 1, 196613, 393216, 1, 262149, 393216, 1, 327685, 393216, 1, 393221, 393216, 1, 458757, 393216, 1, 524293, 393216, 1, 589829, 393216, 1, 655365, 393216, 1, 720901, 393216, 1, 786437, 393216, 1, 851973, 393216, 1, 917509, 393216, 1, 983045, 393216, 1, 1048581, 393216, 1, 1114117, 393216, 1, 1179653, 393216, 1, 1245189, 393216, 1, 1310725, 393216, 1, 65542, 393216, 1, 131078, 393216, 1, 196614, 393216, 1, 262150, 393216, 1, 327686, 393216, 1, 393222, 393216, 1, 458758, 393216, 1, 524294, 393216, 1, 589830, 393216, 1, 655366, 393216, 1, 720902, 393216, 1, 786438, 393216, 1, 851974, 393216, 1, 917510, 393216, 1, 983046, 393216, 1, 1048582, 393216, 1, 1114118, 393216, 1, 1179654, 393216, 1, 1245190, 393216, 1, 1310726, 393216, 1, 65543, 393216, 1, 131079, 393216, 1, 196615, 393216, 1, 262151, 393216, 1, 327687, 393216, 1, 393223, 393216, 1, 458759, 393216, 1, 524295, 393216, 1, 589831, 393216, 1, 655367, 393216, 1, 720903, 393216, 1, 786439, 393216, 1, 851975, 393216, 1, 917511, 393216, 1, 983047, 393216, 1, 1048583, 393216, 1, 1114119, 393216, 1, 1179655, 393216, 1, 1245191, 393216, 1, 1310727, 393216, 1, 65544, 393216, 1, 131080, 393216, 1, 196616, 393216, 1, 262152, 393216, 1, 327688, 393216, 1, 393224, 393216, 1, 458760, 393216, 1, 524296, 393216, 1, 589832, 393216, 1, 655368, 393216, 1, 720904, 393216, 1, 786440, 393216, 1, 851976, 393216, 1, 917512, 393216, 1, 983048, 393216, 1, 1048584, 393216, 1, 1114120, 393216, 1, 1179656, 393216, 1, 1245192, 393216, 1, 1310728, 393216, 1, 65545, 393216, 1, 131081, 393216, 1, 196617, 393216, 1, 262153, 393216, 1, 327689, 393216, 1, 393225, 393216, 1, 458761, 393216, 1, 524297, 393216, 1, 589833, 393216, 1, 655369, 393216, 1, 720905, 393216, 1, 786441, 393216, 1, 851977, 393216, 1, 917513, 393216, 1, 983049, 393216, 1, 1048585, 393216, 1, 1114121, 393216, 1, 1179657, 393216, 1, 1245193, 393216, 1, 1310729, 393216, 1, 65546, 393216, 1, 131082, 393216, 1, 196618, 393216, 1, 262154, 393216, 1, 327690, 393216, 1, 393226, 393216, 1, 458762, 393216, 1, 524298, 393216, 1, 589834, 393216, 1, 655370, 393216, 1, 720906, 393216, 1, 786442, 393216, 1, 851978, 393216, 1, 917514, 393216, 1, 983050, 393216, 1, 1048586, 393216, 1, 1114122, 393216, 1, 1179658, 393216, 1, 1245194, 393216, 1, 1310730, 393216, 1)
layer_1/name = "Board"
layer_1/tile_data = PackedInt32Array(0, 458752, 1, 1376256, 458752, 1, 1, 458752, 1, 1376257, 458752, 1, 2, 458752, 1, 1376258, 458752, 1, 3, 458752, 1, 1376259, 458752, 1, 4, 458752, 1, 1376260, 458752, 1, 5, 458752, 1, 1376261, 458752, 1, 6, 458752, 1, 1376262, 458752, 1, 7, 458752, 1, 1376263, 458752, 1, 8, 458752, 1, 1376264, 458752, 1, 9, 458752, 1, 1376265, 458752, 1, 10, 458752, 1, 1376266, 458752, 1, 11, 458752, 1, 1376267, 458752, 1, 65536, 458752, 1, 65547, 458752, 1, 131072, 458752, 1, 131083, 458752, 1, 196608, 458752, 1, 196619, 458752, 1, 262144, 458752, 1, 262155, 458752, 1, 327680, 458752, 1, 327691, 458752, 1, 393216, 458752, 1, 393227, 458752, 1, 458752, 458752, 1, 458763, 458752, 1, 524288, 458752, 1, 524299, 458752, 1, 589824, 458752, 1, 589835, 458752, 1, 655360, 458752, 1, 655371, 458752, 1, 720896, 458752, 1, 720907, 458752, 1, 786432, 458752, 1, 786443, 458752, 1, 851968, 458752, 1, 851979, 458752, 1, 917504, 458752, 1, 917515, 458752, 1, 983040, 458752, 1, 983051, 458752, 1, 1048576, 458752, 1, 1048587, 458752, 1, 1114112, 458752, 1, 1114123, 458752, 1, 1179648, 458752, 1, 1179659, 458752, 1, 1245184, 458752, 1, 1245195, 458752, 1, 1310720, 458752, 1, 1310731, 458752, 1)
layer_2/name = "Locked"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Shadow"
layer_3/tile_data = PackedInt32Array()
layer_4/name = "Active"
layer_4/tile_data = PackedInt32Array()
layer_5/name = "Preview"
layer_5/tile_data = PackedInt32Array()
script = ExtResource("3_mtcdl")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_3muce")

[node name="NextPieceLabel" type="Label" parent="UI"]
offset_left = 418.0
offset_top = 156.0
offset_right = 614.0
offset_bottom = 188.0
theme_override_fonts/font = ExtResource("5_mt25t")
theme_override_font_sizes/font_size = 19
text = "NEXT PIECE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
offset_left = 92.0
offset_top = 234.0
offset_right = 300.0
offset_bottom = 341.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("5_mt25t")
theme_override_font_sizes/font_size = 52
text = "GAME 
OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 418.0
offset_top = 17.0
offset_right = 614.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("5_mt25t")
theme_override_font_sizes/font_size = 19
text = "SCORE"
vertical_alignment = 1

[node name="Score" type="Label" parent="UI"]
offset_left = 418.0
offset_top = 49.0
offset_right = 614.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("5_mt25t")
theme_override_font_sizes/font_size = 19
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="UI"]
offset_left = 418.0
offset_top = 404.0
offset_right = 614.0
offset_bottom = 436.0
theme_override_fonts/font = ExtResource("5_mt25t")
text = "NEW GAME"

[node name="MovementTimer" type="Node" parent="."]
script = ExtResource("2_8y2wp")
